# basketballAI

./: README.md  package-lock.json  package.json
backend/: .env  pyproject.toml
backend/app/: main.py
backend/models/: ai_model.pkl  scaler.pkl  train_model.py
frontend/: package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/pages/: AnalyzePage.css  AnalyzePage.jsx  ComparePlayers.css  ComparePlayers.jsx  HomePage.css  HomePage.jsx
